# TfsMcp

./: .gitignore  .tmp_dbg_mcp.py  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  pyproject.toml  test_full_recovery_flow.py  test_mcp_live.py  test_parser_debug.py  test_timeout_classification.py  test_window_monitor.py  tfs_mcp.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-07-tfs-mcp-service.md  2026-04-08-real-tfs-workspace-sessions.md  2026-04-08-tfs-session-lifecycle-completion.md
scripts/: Install-TfsMcp.ps1  Manage-TfsMcp.ps1  Run-TfsMcpBackground.ps1  Setup-TfsMcpStartup.ps1  TfsMcp.PowerShell.psm1
src/tfsmcp/: __main__.py  config.py  console.py  contracts.py  http_app.py  logging_config.py  mcp_server.py  runtime.py
src/tfsmcp/service/: __init__.py  __main__.py  installer.py  windows_service.py
src/tfsmcp/sessions/: __init__.py  manager.py  store.py
tests/: test_config.py  test_console.py  test_http_app.py  test_main.py  test_mcp_tools.py  test_readme.py  test_runtime.py
tests/integration/: real_test.local.json.example  test_mcp_interactions_suite.py  test_real_mcp_worktree_isolation.py
tests/service/: test_installer.py  test_service_main.py  test_windows_service.py
tests/sessions/: test_manager.py  test_runtime_real_session_actions.py  test_runtime_session_actions.py  test_store_robustness.py
tests/tfs/: test_detection.py  test_executor.py  test_locator_runner.py
(+10 files in other folders)
