[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tfsmcp"
version = "0.1.0"
description = "Local TFS MCP service"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "TfsMcp Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Topic :: Software Development :: Version Control",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "fastmcp>=0.1.0",
  "pywin32>=306; platform_system == 'Windows'",
  "psutil>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/joaorura/TfsMcp"
Repository = "https://github.com/joaorura/TfsMcp"
Issues = "https://github.com/joaorura/TfsMcp/issues"

[project.optional-dependencies]
dev = ["pytest>=8.3", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["src"]
